[tool.poetry]
name = "peakina"
version = "0.10.1"
description = "pandas readers on steroids (remote files, glob patterns, cache, etc.)"
authors = ["Toucan Toco <dev@toucantoco.com>"]
readme = "README.md"
homepage = "https://github.com/ToucanToco/peakina"
documentation = "https://toucantoco.github.io/peakina"
repository = "https://github.com/ToucanToco/peakina"
license = "BSD-3-Clause"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.8"
certifi = ">=2022.5.18,<2023.0.0"
chardet = ">=4,<6"
fastparquet = ">=0.8.0,<2024"
jq = "^1.2.1"
openpyxl = "^3.0.9"
pandas = "^1.4.2"
paramiko = ">=2.9.2,<4.0.0"
pydantic = "^1.9.0"
python-slugify = ">=5.0.2,<9.0.0"
python-snappy = ">=0.6.0,<1"
s3fs = "^2022.1.0"
tables = "^3.7.0"
urllib3 = "^1.26.8"
xlrd = "^2.0.1"
xmltodict = ">=0.12.0,<1"
geopandas = ">=0.11.1,<1"

[tool.poetry.dev-dependencies]
aiobotocore = {extras = ["boto3"], version = "^2.3.4"}
black = "^23.3"
docker = "^6.0.1"
flake8 = "^5.0.4"
isort = "^5.12.0"
mkdocs = "^1.4.2"
mkdocs-material = "^9.1.5"
mypy = "^1.1"
pre-commit = "^3.2.1"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
pytest-rerunfailures = "^10.3"
pytest-sugar = ">=0.9.4,<1"
PyYAML = "^6.0"

# types
types-chardet = "^5.0.4"
types-certifi = "^2021.10.8"
types-dataclasses = ">=0.6.4,<1"
types-paramiko = "^3.0.0"
types-python-slugify = "^8.0.0"
types-PyYAML = "^6.0.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py310"]
line-length = 100

[tool.isort]
profile = "black"
combine_as_imports = true

[tool.mypy]
python_version = "3.10"
plugins = "pydantic.mypy"
pretty = true
allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
ignore_missing_imports = true
implicit_reexport = false
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_no_return = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_return_any = true
warn_unreachable = true
show_error_codes = true
show_column_numbers = true
show_error_context = true

[[tool.mypy.overrides]]
module = "peakina.*"
disallow_untyped_defs = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
