[tool.poetry]
name = "peakina"
version = "0.14.0"
description = "pandas readers on steroids (remote files, glob patterns, cache, etc.)"
authors = ["Toucan Toco <dev@toucantoco.com>"]
readme = "README.md"
homepage = "https://github.com/ToucanToco/peakina"
documentation = "https://toucantoco.github.io/peakina"
repository = "https://github.com/ToucanToco/peakina"
license = "BSD-3-Clause"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.10"
certifi = "*"
chardet = ">=4,<6"
jq = "^1.2.1"
pandas = ">=1.5.3,<3.0.0"
paramiko = ">=2.9.2,<4.0.0"
pydantic = "^2.4.2"
python-slugify = ">=5.0.2,<9.0.0"
s3fs = ">=2022.1,<2025.0"
urllib3 = ">=1.26.8,<3.0.0"
xlrd = "^2.0.1"
xmltodict = ">=0.12.0,<1"
geopandas = ">=1.0.0,<2"
pyarrow = ">=11,<19"
openpyxl = "^3.1.2"

[tool.poetry.group.dev.dependencies]
aiobotocore = {extras = ["boto3"], version = "^2.3.4"}
docker = "^7.1.0"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.18"
mypy = "^1.10"
pre-commit = ">=3.7.1,<5.0.0"
pytest = "^8.2.2"
pytest-cov = ">=5,<7"
pytest-mock = "^3.14.0"
pytest-rerunfailures = ">=14,<16"
pytest-sugar = ">=0.9.4,<2"
PyYAML = "^6.0"
ruff = ">=0.6.1,<0.8.0"

# types
types-chardet = "^5.0.4"
types-certifi = "^2021.10.8"
types-dataclasses = ">=0.6.4,<1"
types-paramiko = "^3.4.0"
types-python-slugify = "^8.0.2"
types-PyYAML = "^6.0.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Assume python 3.10
target-version = "py310"
line-length = 100
exclude = ["__init__.py", ".git", ".direnv"]

[tool.mypy]
python_version = "3.10"
plugins = "pydantic.mypy"
pretty = true
allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
ignore_missing_imports = true
implicit_reexport = false
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_no_return = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_return_any = true
warn_unreachable = true
show_error_codes = true
show_column_numbers = true
show_error_context = true

[[tool.mypy.overrides]]
module = "peakina.*"
disallow_untyped_defs = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
