[project]
name = "peakina"
version = "0.19.0"
authors = [{ name = "Toucan Toco", email = "dev@toucantoco.com" }]
license = { text = "BSD-3-Clause" }
requires-python = "<4.0,>=3.13"
dependencies = [
    "certifi",
    "chardet<6,>=4",
    "fastexcel[pandas]>=0.14.0",
    "geopandas<2,>=1.0.0",
    "jq<2.0.0,>=1.2.1",
    "pandas<3.0.0,>=2",
    "paramiko<4.1.0,>=2.9.2",
    "pyarrow>=11",
    "pydantic<3.0.0,>=2.4.2",
    "python-slugify<9.0.0,>=5.0.2",
    "s3fs>=2022.1,<2026.0",
    "urllib3<3.0.0,>=1.26.8",
    "xlrd<3.0.0,>=2.0.1",
    "xmltodict<2,>=0.12.0",
]
description = "pandas readers on steroids (remote files, glob patterns, cache, etc.)"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
homepage = "https://github.com/ToucanToco/peakina"
repository = "https://github.com/ToucanToco/peakina"
documentation = "https://toucantoco.github.io/peakina"

[dependency-groups]
dev = [
    "aiobotocore[boto3]<3.0.0,>=2.3.4",
    "docker<8.0.0,>=7.1.0",
    "mkdocs<2.0.0,>=1.5.3",
    "mkdocs-material<10.0.0,>=9.5.18",
    "mypy<2.0,>=1.10",
    "pre-commit<5.0.0,>=3.7.1",
    "pytest<9.0.0,>=8.2.2",
    "pytest-cov<8,>=7",
    "pytest-mock<4.0.0,>=3.14.0",
    "pytest-rerunfailures<17,>=16",
    "pytest-sugar<2,>=0.9.4",
    "PyYAML<7.0,>=6.0",
    "ruff<0.14.1,>=0.14.0",
    "types-chardet<6.0.0,>=5.0.4",
    "types-certifi<2022.0.0,>=2021.10.8",
    "types-dataclasses<1,>=0.6.4",
    "types-paramiko<4.1.0,>=4.0.0.0",
    "types-python-slugify<9.0.0,>=8.0.2",
    "types-PyYAML<7.0.0,>=6.0.12",
]

# FIXME: temporary workaround until https://github.com/pypa/setuptools/issues/4759 is fixed
[tool.setuptools]
license-files = []

[tool.uv]
package = true

[tool.ruff]
# Assume python 3.13
target-version = "py313"
line-length = 100
exclude = ["__init__.py", ".git", ".direnv"]

[tool.mypy]
python_version = "3.13"
plugins = "pydantic.mypy"
pretty = true
allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
ignore_missing_imports = true
implicit_reexport = false
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_no_return = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_return_any = true
warn_unreachable = true
show_error_codes = true
show_column_numbers = true
show_error_context = true

[[tool.mypy.overrides]]
module = "peakina.*"
disallow_untyped_defs = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
