[metadata]
name = peakina
description = pandas readers on steroids (remote files, glob patterns, cache, etc.)
long_description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
author = Toucan Toco
author_email = dev@toucantoco.com
url = https://github.com/ToucanToco/peakina
version = 0.4.0
license = BSD
classifiers=
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:
install_requires =
    certifi
    chardet
    fastparquet
    jq
    pandas
    paramiko
    pydantic
    python-slugify
    s3fs
    tables
    urllib3
    xlrd
    xmltodict

[options.extras_require]
test =
    black
    flake8
    isort
    mypy
    pytest
    pytest-cases
    pytest-cov
    pytest-isort
    pytest-mock
    pytest-rerunfailures
    pytest-sugar

[flake8]
max_line_length = 100
max-complexity = 10

[isort]
line_length=100
known_first_party=peakina
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True

[mypy]
ignore_missing_imports = True
plugins = pydantic.mypy

[tool:pytest]
testpaths = tests
addopts = --isort
filterwarnings = ignore
