[metadata]
name = peakina
description = pandas readers on steroids (remote files, glob patterns, cache, etc.)
long_description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
author = Toucan Toco
author_email = dev@toucantoco.com
url = https://github.com/ToucanToco/peakina
version = 0.5.4
license = BSD
classifiers=
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
    certifi
    chardet
    fastparquet
    pandas
    paramiko
    pydantic
    pyjq
    python-slugify
    python-snappy
    s3fs==0.4.0
    tables
    urllib3
    xlrd
    xmltodict

[options.packages.find]
include =
    peakina
    peakina.*

[options.extras_require]
test =
    black
    docker
    flake8
    flake8-quotes
    isort
    mypy
    pyyaml
    pytest==5.3.5
    pytest-cases<2
    pytest-cov
    pytest-mock
    pytest-rerunfailures
    pytest-sugar

[flake8]
inline-quotes = single
multiline-quotes = double
max_line_length = 100
max-complexity = 10

[isort]
line_length=100
known_first_party=peakina
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True

[mypy]
plugins = pydantic.mypy
follow_imports = silent
ignore_missing_imports = True
allow_redefinition = True
#check_untyped_defs = True

[tool:pytest]
testpaths = tests
filterwarnings = ignore
