[metadata]
name = peakina
description = pandas readers on steroids (remote files, glob patterns, cache, etc.)
long_description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
author = Toucan Toco
author_email = dev@toucantoco.com
url = https://github.com/ToucanToco/peakina
version = 0.5.7
license = BSD
classifiers=
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
    certifi
    chardet
    fastparquet
    pandas
    paramiko
    pydantic
    pyjq
    python-slugify
    python-snappy
    s3fs
    tables
    urllib3
    xlrd
    xmltodict

[options.packages.find]
include =
    peakina
    peakina.*

[options.extras_require]
test =
    black
    boto3
    docker
    flake8
    flake8-quotes
    isort
    mypy
    pyyaml
    pytest==5.3.5
    pytest-cases<4
    pytest-cov
    pytest-mock
    pytest-rerunfailures
    pytest-sugar
    openpyxl
    types-PyYAML
    types-chardet
    types-paramiko
    types-certifi
    types-dataclasses
    types-python-slugify

[tool:pytest]
testpaths = tests
filterwarnings = ignore
